# kraken

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/client/: Exchange.h  ExchangeClient.h  ExchangeFeedListener.h  ExchangeUpdateListener.h  RequestFactory.h  exchange.h
include/comm/: CommWebSocket.h  comm.h  comm_ws.h
include/comm/websocket/: WebSocketBoost.h  ws_boost.h
include/common/: config.h  root_certificates.hpp
include/feeddelayer/: DelayedFeedListener.h  FeedDelayer.h
include/websocket/: ws.h  ws_boost.h
source/client/: ExchangeClient.cpp  RequestFactory.cpp  exchange.cpp
source/comm/: CommWebSocket.cpp  comm_ws.cpp
source/comm/websocket/: WebSocketBoost.cpp  ws_boost.cpp
source/feeddelayer/: FeedDelayer.cpp
source/websocket/: ws_boost.cpp
